# vst-ab-switch

./: CMakeLists.txt  README.md  VST3_SDK.cmake  build-prod.bat  build-prod.sh  fetch_jamba.cmake  gtest-download.cmake.in  gtest.cmake  jamba-download.cmake.in  jamba.cmake
.github/workflows/: run-tests-macos-action.yml  run-tests-windows-action.yml
archive/: README-macOS_64bits.txt  README-win_64bits.txt  README.txt
audio-unit/: audiounitconfig.h
design/: Background_2x.pxm  Control_AudioSwitch.pxm  Control_LEDLight.pxm  Control_SoftenSwitch.pxm
design/Background_2x.pxd/: metadata.info
design/Background_2x.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
design/Background_2x.pxd/data/: 03B614DE-B6B5-4A2D-9A46-BA9598778C06-5442-00001DD09EA1EE1F  063011BF-C9BF-49AF-8485-9CD035A504AB-5442-00001DB0DC63CEED  2C29ECE2-D046-4E39-86B6-32AB7CF093CC-4008-0000082292A4D9FB  3639E649-DED3-475B-8B56-C7D4CFD964D5-2466-0000104284852C98  4C0A1B74-9007-4529-BE27-1548E86E740D-2466-0000103F97A37B33  5DF8A935-CE69-43DA-9AB6-C678245C0738-1608-00000A7FE82956C0  653D25B8-4898-49EF-AA4C-83FAD196A08B-1608-00000A729C070554  72E82E88-5C22-4BA3-A706-637B1826F8C9-1608-00000DAA6FCD52F9  74164989-A96D-4428-81AD-AB5F24F6A316-1608-00000EEA625F3932  75B5CE69-0419-4072-AA34-DCDBEB899639  9D97ECD7-8D1E-4C9F-972A-4C2E344D40D5  AAA0B657-8ABB-44FA-80EC-A36B807BCD36-2466-00001352FB68CFAE  BB23B96A-C909-4FFC-BBCB-B2222D23E3C8-1608-000012D77CEE7557  E6301B67-D11D-4919-BEC5-AF5CAE74697B-5442-00001C23CFA911AE  F0BA3E93-DFC2-4174-88FD-6963F016337E-3988-000017A02EB47652  originalImportedContentDocumentInfo
mac/: Info.plist
resource/: ABSwitch.rc  ABSwitch.uidesc
src/cpp/: ABSwitchCIDs.h  ABSwitchController.cpp  ABSwitchController.h  ABSwitchModel.h  ABSwitchPlugin.cpp  ABSwitchPlugin.h  ABSwitchProcess.h  ABSwitchProcessor.cpp  ABSwitchProcessor.h  ABSwitchUtils.h  ABSwitchVST2.cpp  ABSwitchVST3.cpp  Concurrent.h  StringTextEdit.cpp  StringTextEdit.h  version.h  version.h.in
test/cpp/: test-concurrent.cpp
